contact me implementation and title page

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/moiguitarrock/mctecnia#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
     "express": "^4.14.0",
+    "express-mailer": "^0.3.1",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.10",
@@ -27,6 +29,7 @@
     "gulp-less": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
+    "jade": "^1.11.0",
     "jquery": "^1.11.3"
   }
 }
