--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
     "jade": "^1.11.0",
-    "jquery": "^1.11.3"
+    "jquery": "^1.11.3",
+    "serve-favicon": "^2.3.0"
   }
 }
